Fix element wrapping issue, make squares responsive

--- a/src/styles/faux.css
+++ b/src/styles/faux.css
@@ -1,28 +1,29 @@
-.faux-col {
-    max-width: 10vh;
+.col {
     padding: 0;
 }
 
-.col {
-    padding: 0;
+.faux-col {
+
 }
 
 .game-col {
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    padding: 0;
 }
 
 .faux-row {
-    min-width: fit-content;
-    max-width: fit-content;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 .square {
-    width: 100px;
-    height: 100px;
+    aspect-ratio: 1/1;
+    width: 5vw;
+    min-width: 50px;
+    height: auto;
     border: 1px solid black;
-    padding: 0;
 }
